--- a/paper/examples.tex
+++ b/paper/examples.tex
@@ -142,7 +142,7 @@ mergeable integers.  Concretely, it is a composition of \C{MList} and
 as \C{Counter.merge} (Sec.~\ref{sec:intro}).  An alternative
 instantiation of \C{MList} is for a quantity type
 (\C{Qty}) that supports \C{add} and \C{subtract} operations, but
-\begin{wrapfigure}{l}{.45\textwidth}
+\begin{wrapfigure}{L}{.45\textwidth}
   \centering
   \includegraphics[scale=0.4]{Figures/list-eg}
   \caption{Lists of mergeable values are mergeable. }
@@ -210,7 +210,7 @@ mergeable types is shopping list application, that allows its users to
 collaboratively build a shopping list (listing items in the decreasing
 order of their priority), by adding new items with a
 specified quantity, deleting existing items, and increasing or
-\begin{wrapfigure}{l}{.5\textwidth}
+\begin{wrapfigure}{L}{.5\textwidth}
   \centering
   \includegraphics[scale=0.3]{Figures/shopping-list}
   \caption{Merging concurrent shopping lists}
