--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -136,7 +136,7 @@ nonetheless witness anamolous states that violate the invariant
 because updates to $c_1$ and $c_2$ may be applied independently in any
 order on any replica.  For example, if a replica increments both
 counters, a \C{read} operation performed at another replica may
-\begin{wrapfigure}{l}{.5\textwidth}
+\begin{wrapfigure}{L}{.5\textwidth}
   \begin{center}
     \includegraphics[scale=0.4]{Figures/dali-counter}
   \end{center}
