--- a/paper/model.tex
+++ b/paper/model.tex
@@ -63,7 +63,7 @@ versions of a drawing canvas (see Fig.~\ref{fig:merge-canvas}) that
 includes includes two concurrent versions (\C{v1} and \C{v2}),
 and their least common ancestor (\C{lca}) - the version from which the
 two concurrent versions evolved independently. The merge function can
-\begin{wrapfigure}{l}{.4\textwidth}
+\begin{wrapfigure}{L}{.4\textwidth}
 \centering
 \includegraphics[scale=0.43]{Figures/canvas-merging}
 \caption{Merging concurrent versions (\C{v1} and \C{v2}) of a drawing
