minor edits: missing parens and spelling fix

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -234,7 +234,7 @@ Our contributions are summarized below:
       of replicated state.
 
     \item We present a formalization of the \name programming model,
-      and establish the comditions under which eventual convergence of
+      and establish the conditions under which eventual convergence of
       concurrent version state can be guaranteed.
 
     \item We describe an implementation of the \name library that
