--- a/paper/model.tex
+++ b/paper/model.tex
@@ -76,7 +76,7 @@ values on both the canvases. For instance, if the color of a pixel in
 is white, then it means that only \C{v2} modified the color. Hence the
 pixel is colored green in the merged canvas. On the other hand, if the
 pixel is red in \C{v1}, then it means that both \C{v1} and \C{v2} have
-modified the color. In such case, an appopriate color-mixing algorithm
+modified the color. In such case, an appropriate color-mixing algorithm
 can be used to determine the color of pixel.  For instance, the pixel
 can be colored yellow - an additive combination of red and green. The
 logic is illustrated in Fig.~\ref{fig:canvas-merging}.
