--- a/paper/semantics.tex
+++ b/paper/semantics.tex
@@ -68,7 +68,7 @@ thread ($t$) forked-off from the top branch.  The first version on the
 current branch ($H(t)$) denotes the same value ($v$) as the initial
 version on the top branch, although versions themselves are deemed
 distinct. The new version is tagged with a \C{FORK} tag that keeps the
-record of its orgin, namely the \C{fork} operation and the branch from
+record of its origin, namely the \C{fork} operation and the branch from
 which the current branch is forked. The \rulelabel{E-Fork} rule forks
 a new thread with a fresh id ($t'$) and adds it to the thread pool.
 The corresponding branch ($H(t')$) is forked from the parent thread's
